Minor fix for card z-index

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,6 @@ code {
   overflow: hidden;
   position: relative;
   width: 200px;
-  z-index: -1;
 }
 
 .card-component-back {
